tests/errors/surf_cls_07.experr
'C' object is not indexable
